{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 10,
  "lineage": "739c7c3c-91aa-8e08-d7ab-5ce328b7552e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "exadel-route-tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640426948125:route-table/rtb-09c884534d0a8408b",
            "default_route_table_id": "rtb-09c884534d0a8408b",
            "id": "rtb-09c884534d0a8408b",
            "owner_id": "640426948125",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bcc2d1fa81fad48",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Exadel task RouteTables"
            },
            "tags_all": {
              "Name": "Exadel task RouteTables"
            },
            "timeouts": null,
            "vpc_id": "vpc-011403f4105b59972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.exadel-task-igw",
            "aws_vpc.exadel-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Listener_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-019599717e2dd5baa",
            "arn": "arn:aws:ec2:us-east-1:640426948125:instance/i-0847ee921b6776c00",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0847ee921b6776c00",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "accesser",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0268c1daf079d1ddf",
            "private_dns": "ip-10-0-10-17.ec2.internal",
            "private_ip": "10.0.10.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c7c0cd08fbc4808",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5b1483f98119005",
            "tags": {
              "Name": "Listener server",
              "Owner": "Jamshid Yerzakov"
            },
            "tags_all": {
              "Name": "Listener server",
              "Owner": "Jamshid Yerzakov"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-056701e6c33042ec7"
            ]
          },
          "dependencies": [
            "aws_security_group.Exadel_SecurityGroup",
            "aws_subnet.Exadel_Private_Subnet",
            "aws_vpc.exadel-task-vpc",
            "data.aws_ami.rhel_8_5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b996646377b6619",
            "arn": "arn:aws:ec2:us-east-1:640426948125:instance/i-0e75001768977355f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e75001768977355f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "accesser",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ddeb7d6d97f377ec",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "public_ip": "3.235.175.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077db67ad44f05a46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae7189ecba591bdb",
            "tags": {
              "Name": "Web server",
              "Owner": "Jamshid Yerzakov"
            },
            "tags_all": {
              "Name": "Web server",
              "Owner": "Jamshid Yerzakov"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-056701e6c33042ec7"
            ]
          },
          "dependencies": [
            "aws_security_group.Exadel_SecurityGroup",
            "aws_subnet.Exadel_Public_Subnet",
            "aws_vpc.exadel-task-vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "exadel-task-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640426948125:internet-gateway/igw-01bcc2d1fa81fad48",
            "id": "igw-01bcc2d1fa81fad48",
            "owner_id": "640426948125",
            "tags": {
              "Name": "Exadel task IGW"
            },
            "tags_all": {
              "Name": "Exadel task IGW"
            },
            "vpc_id": "vpc-011403f4105b59972"
          },
          "dependencies": [
            "aws_vpc.exadel-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Exadel_SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640426948125:security-group/sg-056701e6c33042ec7",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056701e6c33042ec7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Allow TLS",
            "name_prefix": "",
            "owner_id": "640426948125",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow tls"
            },
            "tags_all": {
              "Name": "allow tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-011403f4105b59972"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exadel-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Exadel_Private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640426948125:subnet/subnet-0d5b1483f98119005",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5b1483f98119005",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640426948125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Exadel Private Subnet"
            },
            "tags_all": {
              "Name": "Exadel Private Subnet"
            },
            "vpc_id": "vpc-011403f4105b59972"
          },
          "dependencies": [
            "aws_vpc.exadel-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Exadel_Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640426948125:subnet/subnet-0ae7189ecba591bdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae7189ecba591bdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640426948125",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Exadel Public Subnet"
            },
            "tags_all": {
              "Name": "Exadel Public Subnet"
            },
            "vpc_id": "vpc-011403f4105b59972"
          },
          "dependencies": [
            "aws_vpc.exadel-task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exadel-task-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640426948125:vpc/vpc-011403f4105b59972",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f57a8fee23b09e74",
            "default_route_table_id": "rtb-09c884534d0a8408b",
            "default_security_group_id": "sg-035b5fcc8380d2bfd",
            "dhcp_options_id": "dopt-b50404cf",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-011403f4105b59972",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c884534d0a8408b",
            "owner_id": "640426948125",
            "tags": {
              "Name": "VPC Exadel task"
            },
            "tags_all": {
              "Name": "VPC Exadel task"
            }
          }
        }
      ]
    }
  ]
}